fix: use normalizeAssetUrl instead of absoluteURL

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,8 @@
     <link rel="mask-icon" href="<%= BASE_URL %>favicon.svg" color="#333333">
     <title><%= process.env.VUE_APP_TITLE %></title>
     <script type="application/javascript">var baseUrl = "<%= BASE_URL %>"</script>
+    <meta property="og:image" content="<%= BASE_URL %>developer-og.jpg">
+    <meta name="twitter:image" content="<%= BASE_URL %>developer-og-twitter.jpg">
 </head>
 <body data-color-scheme="auto">
 <noscript><%= require('@/assets/global-elements/noscript.html') %></noscript>
