--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 -->
 
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-US" class="no-js">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
