--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 -->
 
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-US" class="no-js">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +20,7 @@
     <script type="application/javascript">var baseUrl = "<%= BASE_URL %>"</script>
 </head>
 <body data-color-scheme="auto">
-<noscript><%= require('@/assets/global-elements/noscript.html') %></noscript>
+<noscript><%= require('@/assets/global-elements/noscript.html').default %></noscript>
 <div id="app"></div>
 <!-- built files will be auto injected -->
 </body>
